--- a/style.css
+++ b/style.css
@@ -248,7 +248,6 @@ main #about > h3 {
 #scroll .scroll-content {
     display: inline-flex;
     animation: scroll 20s linear infinite;
-    align-content: flex-start;
   }
   
 #scroll .scroll-content > img {
@@ -266,34 +265,116 @@ main #about > h3 {
     }
   }
 
-  #acomplish-flex {
+#acomplish-flex {
     padding:7rem;
     display: flex;
     justify-content: space-between;
-  }
+}
 
-  #acomplish-flex .acomplish {
+#acomplish-flex .acomplish {
     display: flex;
     flex-direction: column;
     gap: 0.8rem
-  }
+ }
 
-  .acomplish h1 {
-    font-size: 5rem;
+.acomplish h1 {
+    font-size: 4.7rem;
     color: var(--color-btn);
     font-weight: 500;
   }
 
-  .acomplish h4 {
+.acomplish h4 {
     font-size: 1.1rem;
     color: var(--color-text);
   }
 
-  .acomplish p {
+.acomplish p {
     font-size: 0.9rem;
     color: #525B5B;
     width: 12rem;
   }
+
+  main #testimonial {
+    background-color: var(--color-btn);
+    display: flex;
+    justify-content: space-between;
+    padding-left: 7rem;
+    gap:7rem;
+  }
+
+  .testimoney {
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .testimoney h3 {
+    font-size: var(--pri-text);
+    font-weight: 500;
+    color:var(--color-sub);
+    margin: 7rem 0 1rem 0;
+  }
+
+  .testimoney h2 {
+    font-size: var(--pri-head);
+    color:var(--color-main);
+    font-weight: 500;
+    width:20rem;
+}
+  
+  .testimonial-slider {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    width: 100%;
+  }
+  
+  .testimonial {
+    min-width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .testimonial p:first-child {
+    font-size: 1.8rem;
+    color:var(--color-main);
+    margin-top: 9rem;
+  }
+
+  .testimonial p:nth-child(2) {
+    font-size: 1.8rem;
+    color:var(--color-main);
+    margin-top: 3rem;
+  }
+
+  .testimonial p:nth-child(3) {
+    font-size: var(--pri-text);
+    color:#F8F9FA;
+    margin-top: 1rem;
+  }
+
+  .testimoney .testimonial-icon {
+    margin-top: 10px;
+    font-size: 3rem;
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+    cursor: pointer;
+    justify-content: flex-end;
+    align-items: last baseline;
+  }
+
+.testimonial-icon i {
+    color:var(--color-main);
+}
+
+
+  #testimonial img {
+    width:60%;
+    height: 47rem;
+  }
+
 
 /* Tablet Breakpoint */
 
@@ -395,36 +476,58 @@ main #about > h3 {
         text-align: center;
     }
 
-    .hero-text .appoint > button {
-        background-color: var(--color-btn);
-        color:var(--color-main);
-        padding: 1.3rem 1.7rem;
-        font-size: var(--sec-text);
-        border-radius: 2.5rem;
-        border: none;
-        cursor: pointer;
-        display: flex;
-        gap:1rem;
-        align-items: center;
-    }
+.hero-text .appoint > button {
+     background-color: var(--color-btn);
+    color:var(--color-main);
+    padding: 1.3rem 1.7rem;
+    font-size: var(--sec-text);
+    border-radius: 2.5rem;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    gap:1rem;
+    align-items: center;
+}
 
-    main #about {
-        padding:4rem 2rem;
-    }
+main #about {
+    padding:4rem 2rem;
+}
 
-    #about .about {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
+ #about .about {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
-    #acomplish-flex {
-        padding:4rem 2rem;
-        display:grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto;
-        place-items: center;
-      }
+#acomplish-flex {
+    padding:4rem 2rem;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    place-items: center;
+}
+
+main #testimonial {
+    background-color: var(--color-btn);
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+     gap:7rem
+}
+
+.testimonial p:first-child {
+    font-size: 1.8rem;
+    color:var(--color-main);
+    margin-top: 2rem;
+}
+
+#testimonial img {
+    display: none;
+}
+
+.testimoney h3 {
+    margin: 2rem 0 1rem 0;
+}
     
 }
 
@@ -566,4 +669,26 @@ main #about > h3 {
         grid-template-rows: auto;
         place-items: center;
       }
+    
+      main #testimonial {
+        background-color: var(--color-btn);
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+         gap:7rem
+    }
+    
+    .testimonial p:first-child {
+        font-size: 1.8rem;
+        color:var(--color-main);
+        margin-top: 2rem;
+    }
+    
+    #testimonial img {
+        display: none;
+    }
+    
+    .testimoney h3 {
+        margin: 2rem 0 1rem 0;
+    }
 }
