--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ html {
 .fade-in {
     opacity: 0;
     transform: translateY(20px);
-    transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+    transition: opacity 1.2s ease-out, transform 1.2s ease-out;
 }
 
 .fade-in.visible {
@@ -214,7 +214,7 @@ main #about {
 }
 
 main #about > h3 {
-    color:var(--color-text);
+    color:var(--color-btn);
     font-size: var(--pri-text);
     font-weight: 500;
     margin-bottom: 1rem;
@@ -375,10 +375,87 @@ main #about > h3 {
     height: 47rem;
   }
 
+main #service {
+    padding:7rem;
+}
+
+#service h3 {
+    font-size: var(--pri-text);
+    font-weight: 500;
+    color:var(--color-btn);
+}
+
+#service .service-flex {
+    display:flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
+
+
+#service .service-flex > h2 {
+    font-size: var(--pri-head);
+    color:var(--color-text);
+    font-weight: 500;
+    width:25rem;
+}
+
+.service-flex .appoint {
+    align-self: end;
+}
+
+.service-flex .appoint > button {
+    background-color: var(--color-btn);
+    color:var(--color-main);
+    padding: 0.9rem 1.7rem;
+    font-size: var(--sec-text);
+    border-radius: 2.5rem;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    gap:1rem;
+    align-items: center;
+    outline: none;
+}
+
+.service-flex .appoint > button i {
+    transform:scaleX(-1);
+}
+
+#service .layout-flex {
+    display:flex;
+    justify-content: space-between;
+    gap:2rem;
+    align-items: baseline;
+    margin:5rem 1rem 0 0;
+}
+
+#service .layout-flex > .layout {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap:1rem;
+}
+
+.layout-flex .layout > img {
+    margin-bottom: 2rem;
+}
+
+.layout-flex .layout > h4 {
+    font-size: 1.8rem;
+    color: var(--color-btn);
+    font-weight: 500;
+}
+
+.layout-flex .layout > p {
+    font-size: 0.9rem;
+    color: #525B5B;
+}
+
 
 /* Tablet Breakpoint */
 
-@media (min-width: 577px) and (max-width: 820px) {
+@media (min-width: 577px) and (max-width: 1000px) {
 
     html {
         font-size: 2vw;
@@ -527,6 +604,42 @@ main #testimonial {
 
 .testimoney h3 {
     margin: 2rem 0 1rem 0;
+}
+
+main #service {
+    padding:3rem 2rem;
+}
+
+#service .service-flex {
+    display:block;
+}
+
+#service .service-flex > h2 {
+    font-size: var(--pri-head);
+    color:var(--color-text);
+    font-weight: 500;
+    width:25rem;
+    margin-bottom: 1rem;
+    line-height: 3rem;
+}
+
+
+#service .layout-flex {
+    display:flex;
+    flex-direction: column;
+    gap:2rem;
+}
+
+#service .layout-flex > .layout {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0;
+}
+
+.layout-flex .layout > img {
+    margin-bottom: 2rem;
+    width: 45rem;
 }
     
 }
@@ -690,5 +803,42 @@ main #testimonial {
     
     .testimoney h3 {
         margin: 2rem 0 1rem 0;
+    }
+
+    main #service {
+        padding:3rem 2rem;
+    }
+    
+    #service .service-flex {
+        display:block;
+    }
+    
+    #service .service-flex > h2 {
+        font-size: var(--pri-head);
+        color:var(--color-text);
+        font-weight: 500;
+        width:25rem;
+        margin-bottom: 1rem;
+        line-height: 3rem;
+    }
+    
+    
+    #service .layout-flex {
+        display:flex;
+        flex-direction: column;
+        gap:2rem;
+    }
+    
+    #service .layout-flex > .layout {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 0;
+        text-align: left;
+    }
+    
+    .layout-flex .layout > img {
+        margin-bottom: 2rem;
+        width: 28rem;
     }
 }
