--- a/style.css
+++ b/style.css
@@ -442,7 +442,7 @@ main #service {
 }
 
 .layout-flex .layout > h4 {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     color: var(--color-btn);
     font-weight: 500;
 }
@@ -450,6 +450,50 @@ main #service {
 .layout-flex .layout > p {
     font-size: 0.9rem;
     color: #525B5B;
+}
+
+main #process {
+    padding: 7rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto;
+    background-color: var(--color-btn);
+    gap:5rem;
+}
+
+#process .grid {
+    display: flex;
+    flex-direction: column;
+    gap:1.5rem
+}
+
+#process .proc > h3 {
+    font-size: var(--pri-text);
+    font-weight: 500;
+    color:var(--color-sub);
+}
+
+#process .proc > h2 {
+    font-size: var(--pri-head);
+    font-weight: 500;
+    color:var(--color-main);
+}
+
+#process .pro > h3 {
+    color: var(--color-sub);
+    font-size: var(--pri-text);
+    font-weight: 400;
+}
+
+#process .pro > h2 {
+    color: var(--color-main);
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+#process .pro > p {
+    color:  #cdcdcd;
+    font-size: 0.9rem;
 }
 
 
@@ -640,6 +684,15 @@ main #service {
 .layout-flex .layout > img {
     margin-bottom: 2rem;
     width: 45rem;
+}
+
+main #process {
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
+    background-color: var(--color-btn);
+    gap:5rem;
 }
     
 }
@@ -840,5 +893,14 @@ main #service {
     .layout-flex .layout > img {
         margin-bottom: 2rem;
         width: 28rem;
+    }
+
+    main #process {
+        padding: 3rem 2rem;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto auto auto auto;
+        background-color: var(--color-btn);
+        gap:5rem;
     }
 }
