--- a/about.css
+++ b/about.css
@@ -268,6 +268,7 @@ main #story-flex {
 
 #story-flex div img {
     margin-bottom: 2rem;
+    width: 20rem;
 }
 
 #story-flex div > h3 {
@@ -361,7 +362,405 @@ main #testimonial {
 #testimonial img {
     width:60%;
     height: 47rem;
+}
+
+#team {
+    padding: 7rem 7rem 8rem;
+    display: flex;
+    justify-content: space-between;
+    gap:5rem;
+}
+
+#tteam .team-head {
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+}
+
+#team .team-head > h3 {
+    font-size: var(--pri-text);
+    font-weight: 500;
+    color:var(--color-btn);
+}
+
+#team .team-head > h2 {
+    font-size: var(--pri-head);
+    color:var(--color-text);
+    font-weight: 500;
+    width:10rem;
+}
+
+#team .team-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 9rem 14rem 9rem 9rem 14rem 9rem;
+    gap:3rem 6rem;
+
+}
+
+#team .team-grid > .first {
+    grid-row: span 2;
+}
+
+#team .team-grid > .meet {
+    display: flex;
+    flex-direction: column;
+    gap:1.5rem;
+}
+
+.meet img {
+    width:100%;
+    height: 100%;
+}
+
+.meet .meet-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.meet-flex h4 {
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: var(--color-text);
+}
+
+.meet-flex p {
+    color: #525B5B;
+    font-size: var(--pri-text);
+}
+
+#team .team-grid > .second {
+    grid-area: 2 / 2 / 4 / auto;
+}
+
+#team .team-grid > .third {
+    grid-area: 4 / 1 / 6 / auto;
+}
+
+#team .team-grid > .fourth {
+    grid-area: 5 / auto / 7 / auto;
+}
+
+main #unlock {
+    padding: 7rem;
+    background-image: url(./home/Section.svg);
+    background-size: cover;
+    width: 100%;
+    height: 50rem;
+}
+
+
+main #unlock > .unlock-flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.unlock-flex .head-text {
+    width: 65rem;
+}
+
+.unlock-flex .head-text > h1 {
+    font-size: 4.3rem;
+    font-weight: 500;
+    color:var(--color-main)
+}
+
+#unlock .head-info {
+    display: flex;
+    flex-direction: column;
+    gap:2rem
+}
+
+#unlock .head-info > p {
+    color:var(--color-main);
+    font-size: var(--pri-text);
+    line-height: 1.8rem;
+}
+
+.head-info .head-btn {
+    display: flex;
+    gap: 2rem;
+}
+
+.head-info .head-btn > button:first-child {
+    background-color: var(--color-btn);
+    color:var(--color-main);
+    padding: 0.9rem 1.7rem;
+    font-size: var(--sec-text);
+    border-radius: 2.5rem;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    gap:1rem;
+    align-items: center;
+    outline: none;
+    transition: background-color 0.5s ease;
+}
+
+.head-info .head-btn > button:first-child:hover {
+    background: transparent;
+    color: var(--color-main);
+    border: 1.5px solid #F8F9FA;
+}
+
+.head-btn button > i {
+    transform:scaleX(-1);
+}
+
+.head-info .head-btn > button:last-child {
+    padding: 0.9rem 1.7rem;
+    font-size: var(--sec-text);
+    border-radius: 2.5rem;
+    border: 1.5px solid #F8F9FA;
+    cursor: pointer;
+    display: flex;
+    color:var(--color-main);
+    gap:1rem;
+    align-items: center;
+    outline: none;
+    background: transparent;
+    transition: 0.5s ease;
+}
+
+.head-info .head-btn > button:last-child:hover {
+    background-color: var(--color-btn);
+    border: none;
+}
+
+main #question {
+    padding: 7rem;
+    display: flex;
+    justify-content: space-between;
+    gap: 6rem;
+}
+
+#question .quest-flex {
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+}
+
+.quest-flex h3 {
+    font-size: var(--pri-text);
+    font-weight: 500;
+    color:var(--color-text);
+}
+
+.quest-flex h2 {
+    font-size: var(--pri-head);
+    color:var(--color-text);
+    width:15rem;
+    font-weight: 500;
+}
+
+.quest-flex button {
+    width: 12rem;
+    background-color: var(--color-btn);
+    font-size: var(--sec-text);
+    color:var(--color-main);
+    padding: 0.9rem 1.7rem;
+    border-radius: 2.5rem;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    gap:1rem;
+    align-items: center;
+    outline: none;
+    transition: background-color 0.5s ease;
+}
+
+.quest-flex button:hover {
+    background: transparent;
+    color: var(--color-dark);
+    border: 1.5px solid #525B5B;
+}
+
+.quest-flex button > i {
+    transform:scaleX(-1);
+}
+
+.faq {
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+}
+
+.faq .faq-item {
+    max-width: 100%;
+    border: 1.5px solid #eaeaea;
+    padding: 1.5rem;
+    border-radius: 1.5rem;
+}
+
+.faq .faq-item > .faq-question {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.4rem;
+    font-weight: 500;
+    color:var(--color-text)
+}
+
+.faq-item .faq-question > span {
+    width:35rem;
+}
+
+.faq-icon {
+    transition: transform 0.3s ease;
+    font-size: 1.5rem;
   }
+  
+.faq-answer {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease, padding 0.3s ease;
+    padding:0 7rem;
+    color: var(--color-text);
+  }
+  
+  .faq-item.active .faq-answer {
+    max-height: 20rem;
+    padding: 1rem 7rem;
+  }
+  
+  .faq-item.active .faq-icon {
+    transform: rotate(180deg); /* Arrow flips */
+  }
+
+  footer {
+    padding: 7rem;
+    background-color: var(--color-btn);
+    display: flex;
+    flex-direction: column;
+    gap:5rem;
+  }
+
+  footer .first-foot {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 12.5rem;
+  }
+
+
+  footer .first-foot > .onee {
+    display: flex;
+    flex-direction: column;
+    gap:2rem;
+  }
+
+  footer .first-foot > .onee h2 {
+    font-size: var(--pri-head);
+    color:var(--color-main);
+    width:25rem;
+    font-weight: 500;
+  }
+
+  footer .first-foot >.onee .get-btn {
+    background-color: var(--color-sub);
+    color:var(--color-dark);
+    padding: 0.9rem 1.7rem;
+    font-size: var(--sec-text);
+    border-radius: 2.5rem;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    gap:1rem;
+    align-items: center;
+    outline: none;
+    transition: background-color 0.5s ease;
+    width: 12rem;
+  }
+
+  footer .first-foot > .onee .get-btn:hover {
+    background: transparent;
+    color: var(--color-main);
+    border: 1.5px solid #F8F9FA;
+}
+
+.onee .get-btn > i {
+    transform:scaleX(-1);
+}
+
+footer .first-foot > .twoo {
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+}
+
+footer .first-foot > .twoo p {
+    color: #cdcdcd;
+    font-size: var(--pri-text);
+    margin-bottom: 1rem;
+}
+
+footer .first-foot > .twoo a {
+    color: var(--color-main);
+    text-decoration: none;
+    font-size: var(--pri-text);
+}
+
+footer .second-foot {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 11rem;
+}
+
+footer .second-foot > .fourr {
+    display: flex;
+    flex-direction: column;
+    gap:1rem;
+}
+
+.second-foot .fourr > .logo {
+    display: flex;
+    gap:0.5rem;
+    align-items: center;
+}
+
+.fourr .logo > p {
+    font-size: 1.8rem;
+    color:var(--color-main);
+}
+
+.fourr p {
+    font-size: var(--pri-text);
+    color: #cdcdcd;
+    width: 20rem;
+}
+
+footer .second-foot > .fivee {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+footer .second-foot >.fivee p {
+    color: var(--color-main);
+    width: 14rem;
+}
+
+footer .second-foot > .fivee a {
+    color: var(--color-main);
+    text-decoration: underline;
+}
+
+footer .second-foot > .sixx {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+footer .second-foot > .sixx a {
+    color: var(--color-main);
+    text-decoration: underline;
+}
+
+
+
 
 /* Tablet Breakpoint */
 
@@ -516,6 +915,124 @@ main #testimonial {
     .testimoney h3 {
         margin: 2rem 0 1rem 0;
     }
+
+    #team {
+        padding: 3rem 2rem 6rem;
+        display: flex;
+        flex-direction: column;
+        gap:3rem;
+    }
+
+    #team .team-head > h2 {
+        width:100%;
+    }
+
+    #team .team-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 5rem 10rem 5rem 5rem 10rem 5rem;
+        gap: 5rem 2rem;
+    
+    }
+
+    #team .team-grid > .meet img {
+        width: 100%;
+    }
+
+    main #unlock {
+        padding: 3rem 2rem;
+        background-image: url(./home/Section.svg);
+        background-size: cover;
+        height: auto;
+        width: 100%;
+    }
+    
+    main #unlock > .unlock-flex {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap:2rem;
+    }
+    
+    .unlock-flex .head-text {
+        width: 100%;
+    }
+    
+    .unlock-flex .head-text > h1 {
+        width: 100%;
+        text-align: center;
+        font-size: 3rem;
+        line-height: 3rem;
+    }
+    
+    #unlock .head-info > p {
+        color:var(--color-main);
+        font-size: 1.5rem;
+        line-height: 1.8rem;
+        text-align: center;
+    }
+    
+    .head-info .head-btn {
+        display: flex;
+        justify-content: center;
+        gap:2rem;
+    }
+
+    main #question {
+        padding: 3rem 2rem;
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
+    }
+    
+    #question .quest-flex > h2 {
+        width: 100%;
+    }
+    
+    .faq .faq-item {
+        width: 100%;
+        border: 1.5px solid #cdcdcd;
+        padding: 1.5rem;
+        border-radius: 1rem;
+    }
+    
+    .faq-item .faq-answer {
+        color: var(--color-text);
+    }
+    
+    .faq .faq-item > .faq-question {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: 500;
+    }
+
+    
+footer {
+    padding: 3rem 2rem;
+}
+
+footer .first-foot {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    gap: 6rem;
+  }
+
+footer .first-foot > .onee {
+    grid-column: span 2;
+}
+
+footer .second-foot {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    gap: 6rem;
+  }
+
+footer .second-foot > .fourr {
+    grid-column: span 2;
+}
     
 }
 
@@ -703,4 +1220,176 @@ main #testimonial {
     .testimoney h3 {
         margin: 2rem 0 1rem 0;
     }
+
+    #team {
+        padding: 3rem 2rem 8rem;
+        display: flex;
+        flex-direction: column;
+        gap:3rem;
+    }
+
+    #team .team-head > h2 {
+        width:100%;
+    }
+
+    #team .team-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 5rem 10rem 5rem 5rem 10rem 5rem;
+        gap: 2rem 2rem;
+    
+    }
+
+    #team .team-grid > .meet img {
+        width: 100%;
+    }
+
+    main #unlock {
+        padding: 3rem 2rem;
+        background-image: url(./home/Section.svg);
+        background-size: cover;
+        height: auto;
+        width: 100%;
+        background-position: -3.5rem;
+    }
+    
+    main #unlock > .unlock-flex {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap:2rem;
+    }
+    
+    .unlock-flex .head-text {
+        width: 100%;
+    }
+    
+    .unlock-flex .head-text > h1 {
+        width: 100%;
+        text-align: center;
+        font-size: 3rem;
+        line-height: 3rem;
+    }
+    
+    #unlock .head-info > p {
+        color:var(--color-main);
+        font-size: 1.5rem;
+        line-height: 1.8rem;
+        text-align: center;
+    }
+    
+    .head-info .head-btn {
+        display: flex;
+        justify-content: center;
+        gap:2rem;
+    }
+
+    main #unlock {
+        padding: 3rem 2rem;
+        background-image: url(./home/Section.svg);
+        background-size: cover;
+        height: auto;
+        width: 100%;
+        background-position: -3.5rem;
+    }
+    
+    main #unlock > .unlock-flex {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap:2rem;
+    }
+    
+    .unlock-flex .head-text {
+        width: 100%;
+    }
+    
+    .unlock-flex .head-text > h1 {
+        width: 100%;
+        text-align: center;
+        font-size: 3rem;
+        line-height: 3rem;
+    }
+    
+    #unlock .head-info > p {
+        color:var(--color-main);
+        font-size: 1.5rem;
+        line-height: 1.8rem;
+        text-align: center;
+    }
+    
+    .head-info .head-btn {
+        display: flex;
+        justify-content: center;
+        gap:2rem;
+    }
+
+    main #question {
+        padding: 3rem 2rem;
+        display: flex;
+        flex-direction: column;
+        gap: 3rem;
+    }
+
+    #question .quest-flex > h2 {
+        width: 100%;
+    }
+    
+    .faq .faq-item {
+        width: 100%;
+        border: 1.5px solid #cdcdcd;
+        padding: 1.5rem;
+        border-radius: 1rem;
+    }
+
+    .faq .faq-item > .faq-question {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: 500;
+    }
+
+    .faq-answer {
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.3s ease, padding 0.3s ease;
+        padding:0 2rem;
+        color: var(--color-text);
+      }
+      
+      .faq-item.active .faq-answer {
+        max-height: 20rem;
+        padding: 1rem 2rem;
+      }
+
+      .faq-item .faq-question > span {
+        width:18rem;
+    }
+
+    footer {
+        padding: 3rem 2rem;
+    }
+    
+    footer .first-foot {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto;
+        gap: 6rem;
+      }
+    
+    footer .first-foot > .onee {
+        grid-column: span 2;
+    }
+    
+    footer .second-foot {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto;
+        gap: 6rem;
+      }
+    
+    footer .second-foot > .fourr {
+        grid-column: span 2;
+    }
+
 }
