--- a/style.css
+++ b/style.css
@@ -291,7 +291,8 @@ main #about > h3 {
 
 .acomplish h4 {
     font-size: 1.1rem;
-    color: var(--color-text);
+    color: var(--color-btn);
+    font-weight: 500;
   }
 
 .acomplish p {
